--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   provider: ^6.1.5+1
   shared_preferences: ^2.5.3
   slide_to_act: ^2.0.2
+  table_calendar: ^3.2.0
   url_launcher: ^6.3.2
 
 dev_dependencies:
