--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_slidable: ^4.0.3
   gap: ^3.0.1
   google_fonts: ^6.3.2
   hidden_drawer_menu: ^3.0.1
@@ -27,6 +28,16 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   hive_generator: ^2.0.0
   build_runner: ^2.4.6
+  flutter_launcher_icons: ^0.14.4
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "icon/icon_ios.png"
+  adaptive_icon_background: "#2196f3"  # Hintergrundfarbe
+  adaptive_icon_foreground: "icon/app_icon.png"
+  remove_alpha_ios: true
+
 
 flutter:
   uses-material-design: true
