--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: ^3.9.2
+  sdk: ^3.10.0
 
 dependencies:
   flutter:
@@ -21,6 +21,8 @@ dependencies:
   slide_to_act: ^2.0.2
   table_calendar: ^3.2.0
   url_launcher: ^6.3.2
+  image_picker: ^1.0.4
+  
 
 dev_dependencies:
   flutter_test:
