--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   table_calendar: ^3.2.0
   url_launcher: ^6.3.2
   image_picker: ^1.0.4
+  tutorial_coach_mark: ^1.3.3
   
 
 dev_dependencies:
