--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: uni_track
 description: "A new Flutter project."
 publish_to: 'none'
-version: 0.1.0
+version: 1.0.0+1
 
 environment:
   sdk: ^3.10.0
@@ -35,6 +35,7 @@ dev_dependencies:
   hive_generator: ^2.0.0
   build_runner: ^2.4.6
   flutter_launcher_icons: ^0.14.4
+  change_app_package_name: ^1.5.0
 
 flutter_launcher_icons:
   android: "launcher_icon"
